[gd_scene load_steps=3 format=3 uid="uid://c3oqqcgm83dkh"]

[ext_resource type="Script" uid="uid://cb21okjpa5t7x" path="res://goals_screen.gd" id="1_e0j8f"]
[ext_resource type="Texture2D" uid="uid://u2qwkyw4dkes" path="res://CHAR CHAR.png" id="2_8b1pw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_e0j8f")

[node name="Goals Button" type="Button" parent="."]
offset_top = 1136.0
offset_right = 144.0
offset_bottom = 1280.0
text = "Goals"

[node name="Tasks Button" type="Button" parent="."]
offset_left = 144.0
offset_top = 1136.0
offset_right = 288.0
offset_bottom = 1280.0
text = "Tasks"

[node name="Home Button" type="Button" parent="."]
offset_left = 288.0
offset_top = 1136.0
offset_right = 432.0
offset_bottom = 1280.0
text = "Home"

[node name="Battle Button" type="Button" parent="."]
offset_left = 432.0
offset_top = 1136.0
offset_right = 576.0
offset_bottom = 1280.0
text = "Battle"

[node name="Creatures Button" type="Button" parent="."]
offset_left = 576.0
offset_top = 1136.0
offset_right = 720.0
offset_bottom = 1280.0
text = "Creatures"

[node name="CharChar" type="Sprite2D" parent="."]
position = Vector2(342, 298)
texture = ExtResource("2_8b1pw")

[connection signal="pressed" from="Goals Button" to="." method="_on_goals_button_pressed"]
[connection signal="pressed" from="Tasks Button" to="." method="_on_tasks_button_pressed"]
[connection signal="pressed" from="Home Button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="Battle Button" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="Creatures Button" to="." method="_on_creatures_button_pressed"]
